Fixed bug of empty first row when the first word is too long; Fixed bug of breadcrumb bar height; UI minor tweaks.

--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -86,7 +86,7 @@ body {
 #navcontrol li {
     list-style-type: none;
     float: left;
-    max-width: 155px;
+    max-width: 150px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
